// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<label
  className="a b c d e f g"
  htmlFor="radio-option-1"
>
  <input
    checked={false}
    className="h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak al am an ao ap"
    id="radio-option-1"
    name="radio-option-1"
    onChange={[Function]}
    type="radio"
    value="option1"
  />
  <span
    className="aq l ar as at"
  >
    Option 1
  </span>
</label>
`;

exports[`should render 2`] = `
"
.a {
  cursor: pointer
}

.b {
  display: block
}

.c {
  min-height: 1em
}

.d {
  margin: initial
}

.e {
  padding: 0 0 0 2em
}

.f:first-child {
  margin-top: initial
}

.g:hover input {
  border-color: #1E4E79
}

.h {
  z-index: 0
}

.i {
  border: 1px solid #BCBEC0
}

.j {
  vertical-align: middle
}

.k {
  font-family: Open Sans,Helvetica,Arial,sans-serif
}

.l {
  font-size: 0.86667rem
}

.m {
  background: #fff
}

.n {
  color: #333333
}

.o {
  outline: none
}

.p {
  transition: border-color 0.2s ease;
  -webkit-transition: border-color 0.2s ease;
  -moz-transition: border-color 0.2s ease
}

.q {
  position: relative
}

.r {
  height: 15px
}

.s {
  width: 15px
}

.t {
  margin: 1px 0 0
}

.u {
  padding: 0px
}

.v {
  line-height: normal
}

.w {
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none
}

.x {
  top: -1px
}

.y {
  border-radius: 50%
}

.z:hover {
  border-color: #256298
}

.ab:focus {
  border-color: #2F7BBF
}

.ac:focus {
  outline: 5px auto -webkit-focus-ring-color
}

.ae:focus {
  outline-offset: -1px
}

.af::before {
  content: ''
}

.ag::before {
  position: absolute
}

.ah::before {
  background-color: transparent
}

.ai::before {
  color: transparent
}

.aj::before {
  -webkit-text-stroke: 0px
}

.ak::before {
  transition: all 0.2s ease-out;
  -webkit-transition: all 0.2s ease-out;
  -moz-transition: all 0.2s ease-out
}

.al::before {
  border-radius: 50%
}

.am::before {
  height: 3px
}

.an::before {
  width: 3px
}

.ao::before {
  top: 5px
}

.ap::before {
  left: 5px
}

.aq {
  display: inline
}

.ar {
  margin-bottom: 0.38333em
}

.as {
  margin-left: 1em
}

.at {
  min-height: 1.22em
}
"
`;

exports[`should render checked 1`] = `
<label
  className="a b c d e f g"
  htmlFor="radio-option-1"
>
  <input
    checked={true}
    className="h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak al am an ao ap"
    id="radio-option-1"
    name="radio-option-1"
    onChange={[Function]}
    type="radio"
    value="option1"
  />
  <span
    className="aq l ar as at"
  >
    Option 1
  </span>
</label>
`;

exports[`should render checked 2`] = `
"
.a {
  cursor: pointer
}

.b {
  display: block
}

.c {
  min-height: 1em
}

.d {
  margin: initial
}

.e {
  padding: 0 0 0 2em
}

.f:first-child {
  margin-top: initial
}

.g:hover input {
  border-color: #1E4E79
}

.h {
  z-index: 0
}

.i {
  border: 1px solid #BCBEC0
}

.j {
  vertical-align: middle
}

.k {
  font-family: Open Sans,Helvetica,Arial,sans-serif
}

.l {
  font-size: 0.86667rem
}

.m {
  background: #fff
}

.n {
  color: #333333
}

.o {
  outline: none
}

.p {
  transition: border-color 0.2s ease;
  -webkit-transition: border-color 0.2s ease;
  -moz-transition: border-color 0.2s ease
}

.q {
  position: relative
}

.r {
  height: 15px
}

.s {
  width: 15px
}

.t {
  margin: 1px 0 0
}

.u {
  padding: 0px
}

.v {
  line-height: normal
}

.w {
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none
}

.x {
  top: -1px
}

.y {
  border-radius: 50%
}

.z:hover {
  border-color: #256298
}

.ab:focus {
  border-color: #2F7BBF
}

.ac:focus {
  outline: 5px auto -webkit-focus-ring-color
}

.ae:focus {
  outline-offset: -1px
}

.af::before {
  content: ''
}

.ag::before {
  position: absolute
}

.ah::before {
  background-color: #333
}

.ai::before {
  color: transparent
}

.aj::before {
  -webkit-text-stroke: 0px
}

.ak::before {
  transition: all 0.2s ease-out;
  -webkit-transition: all 0.2s ease-out;
  -moz-transition: all 0.2s ease-out
}

.al::before {
  border-radius: 50%
}

.am::before {
  height: 7px
}

.an::before {
  width: 7px
}

.ao::before {
  top: 3px
}

.ap::before {
  left: 3px
}

.aq {
  display: inline
}

.ar {
  margin-bottom: 0.38333em
}

.as {
  margin-left: 1em
}

.at {
  min-height: 1.22em
}
"
`;

exports[`should render without a label 1`] = `
<label
  className="a b c d e f g"
  htmlFor="radio-option-1"
>
  <input
    checked={false}
    className="h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak al am an ao ap"
    id="radio-option-1"
    name="radio-option-1"
    onChange={[Function]}
    type="radio"
    value="option1"
  />
</label>
`;

exports[`should render without a label 2`] = `
"
.a {
  cursor: pointer
}

.b {
  display: block
}

.c {
  min-height: 1em
}

.d {
  margin: initial
}

.e {
  padding: 0 0 0 2em
}

.f:first-child {
  margin-top: initial
}

.g:hover input {
  border-color: #1E4E79
}

.h {
  z-index: 0
}

.i {
  border: 1px solid #BCBEC0
}

.j {
  vertical-align: middle
}

.k {
  font-family: Open Sans,Helvetica,Arial,sans-serif
}

.l {
  font-size: 0.86667rem
}

.m {
  background: #fff
}

.n {
  color: #333333
}

.o {
  outline: none
}

.p {
  transition: border-color 0.2s ease;
  -webkit-transition: border-color 0.2s ease;
  -moz-transition: border-color 0.2s ease
}

.q {
  position: relative
}

.r {
  height: 15px
}

.s {
  width: 15px
}

.t {
  margin: 1px 0 0
}

.u {
  padding: 0px
}

.v {
  line-height: normal
}

.w {
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none
}

.x {
  top: -1px
}

.y {
  border-radius: 50%
}

.z:hover {
  border-color: #256298
}

.ab:focus {
  border-color: #2F7BBF
}

.ac:focus {
  outline: 5px auto -webkit-focus-ring-color
}

.ae:focus {
  outline-offset: -1px
}

.af::before {
  content: ''
}

.ag::before {
  position: absolute
}

.ah::before {
  background-color: transparent
}

.ai::before {
  color: transparent
}

.aj::before {
  -webkit-text-stroke: 0px
}

.ak::before {
  transition: all 0.2s ease-out;
  -webkit-transition: all 0.2s ease-out;
  -moz-transition: all 0.2s ease-out
}

.al::before {
  border-radius: 50%
}

.am::before {
  height: 3px
}

.an::before {
  width: 3px
}

.ao::before {
  top: 5px
}

.ap::before {
  left: 5px
}
"
`;
